Update and rename Aula_07_05.sql to Aula_07_05.md

--- a/Banco-Dados-Avançado/2°_Sem/Aula_07_05.md
+++ b/Banco-Dados-Avançado/2°_Sem/Aula_07_05.md
@@ -1,3 +1,6 @@
+# Criação do esquema
+
+```sql
 use aula_07_05_luanC;
 
 DROP TABLE clientes;
@@ -72,15 +75,19 @@ INSERT INTO itens_pedidos (id, pedido_id, produto_id, quantidade) VALUES
     (5, 3, 4, 1),
     (6, 4, 6, 1),
     (7, 4, 7, 1);
+```
 
+## Essa query está selecionando todos os produtos cujo preço é maior que a média de preços de todos os produtos cadastrados na tabela produtos.
+```sql
 SELECT *
 FROM produtos
 WHERE preco > (
     SELECT AVG(preco)
     FROM produtos
 );
+```
 
--- --------------------------------------------------------
+---
 
 	CREATE TABLE cliente2 (
 		id INT PRIMARY KEY,
