--- a/Banco-Dados-Avançado/2°_Sem/Aula_07_05.md
+++ b/Banco-Dados-Avançado/2°_Sem/Aula_07_05.md
@@ -77,7 +77,7 @@ INSERT INTO itens_pedidos (id, pedido_id, produto_id, quantidade) VALUES
     (7, 4, 7, 1);
 ```
 
-## Essa query está selecionando todos os produtos cujo preço é maior que a média de preços de todos os produtos cadastrados na tabela produtos.
+## Essa query está selecionando todos os produtos cujo preço é maior que a média de preços de todos os produtos cadastrados na tabela produtos
 ```sql
 SELECT *
 FROM produtos
@@ -88,7 +88,9 @@ WHERE preco > (
 ```
 
 ---
+# Outro esquema
 
+```sql
 	CREATE TABLE cliente2 (
 		id INT PRIMARY KEY,
 		nome VARCHAR(100),
@@ -116,7 +118,8 @@ WHERE preco > (
 		(3, 2, 'Teclado Mecânico', 320.00),
 		(4, 3, 'Monitor LG 24"', 980.00),
 		(5, 5, 'HD Externo 1TB', 350.00);
-	
+	```
+
 -- com ON
 SELECT nome 
 FROM cliente2
