--- a/Banco-Dados-Avançado/2°_Sem/Aula_07_05.md
+++ b/Banco-Dados-Avançado/2°_Sem/Aula_07_05.md
@@ -120,29 +120,34 @@ WHERE preco > (
 		(5, 5, 'HD Externo 1TB', 350.00);
 	```
 
+---
+```sql
 -- com ON
 SELECT nome 
 FROM cliente2
 WHERE id IN (SELECT id FROM pedido2);
-
+```
+```sql
 -- com NOT IN
 SELECT nome 
 FROM cliente2
 WHERE id NOT IN (SELECT cliente_id FROM pedido2);
-
+```
 -- ----------------------------------------------------------------
-
+```sql
 -- COM EXIST 
 SELECT nome
 FROM cliente2 c
 WHERE EXISTS (SELECT 1 FROM pedido2 p WHERE p.cliente_id = c.id);
-
+```
+```sql
 -- COM NOT EXIST 
 SELECT nome
 FROM cliente2 c
 WHERE NOT EXISTS (SELECT 1 FROM pedido2 p WHERE p.cliente_id = c.id);
-
+```
 -- ---------------------------------------------------
+```sql
 DROP TABLE clientes_vip;
 
 CREATE TABLE clientes_vip (
@@ -150,8 +155,10 @@ CREATE TABLE clientes_vip (
     nome VARCHAR(50),
     gasto_total DECIMAL (10,2)
 );
-
+```
+```sql
 INSERT INTO clientes_vip(id, nome, gasto_total)
 SELECT id, nome, total_gasto
 FROM cliente2
 WHERE total_gasto > (SELECT AVG(total_gasto) FROM cliente2);
+```
